# ca.footeware.c.texty

./: README.md  ca.footeware.c.texty.json  ca.footeware.c.texty.json~  meson.build
.flatpak-builder/cache/refs/heads/x86_64-ca.footeware.c.texty.json/: init
.flatpak-builder/checksums/: x86_64-ca.footeware.c.texty.json
data/: ca.footeware.c.texty.desktop.in  ca.footeware.c.texty.gschema.xml  ca.footeware.c.texty.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  POTFILES.in  meson.build
src/: main.c  main.css  meson.build  texty-application.c  texty-application.h  texty-window.c  texty-window.cmb  texty-window.h  texty-window.ui  texty.gresource.xml
src/gtk/: help-overlay.cmb  help-overlay.ui
